# OpenCL-CTS

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  :wq  CMakeLists.txt  CMakeVendor.txt  HOW_TO_ADD_TESTS.txt  README.md  appveyor.yml  build_android.py  build_lnx.sh  build_win.bat  build_win_lnx.py  check-format.sh  cl_khr_unified_svm-test-plan.md  cl_offline_compiler.example  clean_tests.py  license.txt  presubmit.sh  readme-spir-v-binaries.txt  travis.sh
test_common/: CMakeLists.txt  Makefile  config.hpp
test_common/autotest/: autotest.hpp  test_case.hpp  test_suite.hpp
test_common/gl/: gl_headers.h  helpers.cpp  helpers.h  setup.h  setup_osx.cpp  setup_win32.cpp  setup_x11.cpp
test_common/gles/: gl_headers.h  helpers.cpp  helpers.h  setup.h
test_common/harness/: Jamfile  Makefile  ThreadPool.c  ThreadPool.cpp  ThreadPool.h  alloc.cpp  alloc.h  clImageHelper.h  cl_offline_compiler-interface.txt  compat.h  conversions.c  conversions.cpp  conversions.h  crc32.c  crc32.cpp  crc32.h  deviceInfo.cpp  deviceInfo.h  errorHelpers.c  errorHelpers.cpp  errorHelpers.h  extensionHelpers.h  feature.cpp  feature.h  featureHelpers.cpp  featureHelpers.h  fpcontrol.h  genericThread.cpp  genericThread.h  hostInfo.cpp  hostInfo.h  imageHelpers.cpp  imageHelpers.h  integer_ops_test_info.h  kernelHelpers.c  kernelHelpers.cpp  kernelHelpers.h  mathHelpers.h  mingw_compat.c  mingw_compat.h  (+28 more)
test_common/miniz/: CMakeLists.txt  miniz.c  miniz.h
test_conformance/: CMakeCommon.cmake  CMakeCommon.txt  CMakeLists.txt  Jamfile  Makefile  build_script_binary.py  build_script_source.py  build_script_spirv.py  check_binaries_in_csv.py  generate_spirv_offline.py  opencl_conformance_tests_12_conversions.csv  opencl_conformance_tests_12_full.csv  opencl_conformance_tests_12_full_no_math_or_conversions.csv  opencl_conformance_tests_12_math.csv  opencl_conformance_tests_12_quick.csv  opencl_conformance_tests_20_full.csv  opencl_conformance_tests_20_full_no_math_or_conversions.csv  opencl_conformance_tests_20_quick.csv  opencl_conformance_tests_21_full_spirv.csv  opencl_conformance_tests_21_legacy_wimpy.csv  opencl_conformance_tests_22.csv  opencl_conformance_tests_conversions.csv  opencl_conformance_tests_d3d.csv  opencl_conformance_tests_full.csv  opencl_conformance_tests_full_binary.csv  opencl_conformance_tests_full_no_math_or_conversions.csv  opencl_conformance_tests_full_spirv.csv  opencl_conformance_tests_generate_spirv.csv  opencl_conformance_tests_math.csv  opencl_conformance_tests_quick.csv  opencl_conformance_tests_vulkan.csv  run_conformance.py  submission_details_template.txt
test_conformance/SVM/: CMakeLists.txt  Makefile  common.h  main.cpp  test_allocate_shared_buffer.cpp  test_allocate_shared_buffer_negative.cpp  test_buffer_address_equivalence.cpp  test_byte_granularity.cpp  test_corner_cases.cpp  test_cross_buffer_pointers.cpp  test_enqueue_api.cpp  test_fine_grain_memory_consistency.cpp  test_fine_grain_sync_buffers.cpp  test_migrate.cpp  test_negative_memcpy.cpp  test_pointer_passing.cpp  test_set_kernel_exec_info_svm_ptrs.cpp  test_shared_address_space_coarse_grain.cpp  test_shared_address_space_fine_grain.cpp  test_shared_address_space_fine_grain_buffers.cpp  test_shared_sub_buffers.cpp  test_size_zero.cpp  test_unified_svm_api_query_defaults.cpp  test_unified_svm_api_suggested_type_index.cpp  test_unified_svm_apis.cpp  test_unified_svm_capabilities.cpp  test_unified_svm_consistency.cpp  test_unified_svm_corner_cases.cpp  test_unified_svm_execinfo.cpp  test_unified_svm_free.cpp  test_unified_svm_map_unmap.cpp  test_unified_svm_mem_cpy.cpp  test_unified_svm_mem_fill.cpp  test_unified_svm_migrate.cpp  test_unified_svm_setarg.cpp  test_unified_svm_threading.cpp  unified_svm_fixture.h
test_conformance/allocations/: CMakeLists.txt  Jamfile  Makefile  allocation_execute.cpp  allocation_execute.h  allocation_fill.cpp  allocation_fill.h  allocation_functions.cpp  allocation_functions.h  allocation_utils.cpp  allocation_utils.h  main.cpp  testBase.h
test_conformance/api/: CMakeLists.txt  Jamfile  Makefile  generate_spirv_capability_deps.py  main.c  main.cpp  negative_context.cpp  negative_device.cpp  negative_enqueue_map_image.cpp  negative_enqueue_marker.cpp  negative_platform.cpp  negative_queue.cpp  procs.h  spirv_capability_deps.def  testBase.h  test_api_consistency.cpp  test_api_min_max.c  test_api_min_max.cpp  test_binary.cpp  test_bool.c  test_bool.cpp  test_clone_kernel.cpp  test_context_destructor_callback.cpp  test_create_context_from_type.cpp  test_create_kernels.c  test_create_kernels.cpp  test_device_command_queue.cpp  test_device_min_data_type_align_size_alignment.cpp  test_device_timer.cpp  test_kernel_arg_changes.cpp  test_kernel_arg_info.c  test_kernel_arg_info.cpp  test_kernel_arg_info_compatibility.cpp  test_kernel_arg_multi_setup.cpp  test_kernel_attributes.cpp  test_kernel_local_memory_size.cpp  test_kernel_private_memory_size.cpp  test_kernels.c  test_kernels.cpp  test_mem_object_info.cpp  (+24 more)
test_conformance/atomics/: CMakeLists.txt  Jamfile  Makefile  common.cpp  common.h  host_atomics.cpp  host_atomics.h  main.c  main.cpp  procs.h  testBase.h  test_atomics.cpp  test_indexed_cases.c  test_indexed_cases.cpp
test_conformance/basic/: CMakeLists.txt  Jamfile  Makefile  main.c  main.cpp  procs.h  run_array  run_array_image_copy  run_image  run_multi_read_image  testBase.h  test_arraycopy.c  test_arraycopy.cpp  test_arrayimagecopy.c  test_arrayimagecopy.cpp  test_arrayimagecopy3d.c  test_arrayimagecopy3d.cpp  test_arrayreadwrite.c  test_arrayreadwrite.cpp  test_astype.cpp  test_async_copy.cpp  test_async_copy2D.cpp  test_async_copy3D.cpp  test_async_copy_fence.cpp  test_async_strided_copy.cpp  test_barrier.c  test_barrier.cpp  test_basic_parameter_types.c  test_basic_parameter_types.cpp  test_bufferreadwriterect.c  test_bufferreadwriterect.cpp  test_constant.c  test_constant.cpp  test_constant_source.cpp  test_createkernelsinprogram.c  test_createkernelsinprogram.cpp  test_enqueue_map.cpp  test_enqueued_local_size.c  test_enqueued_local_size.cpp  (+105 more)
(+2619 files in other folders)
