add_subdirectory(allocations)
add_subdirectory(api)
add_subdirectory(atomics)
add_subdirectory(basic)
add_subdirectory(buffers)
add_subdirectory(commonfns)
add_subdirectory(compiler)
add_subdirectory(computeinfo)
add_subdirectory(gl)
add_subdirectory(conversions)
add_subdirectory(contractions)
add_subdirectory(events)
add_subdirectory(geometrics)
add_subdirectory(half)
add_subdirectory(headers)
add_subdirectory(headers_c99)
add_subdirectory(images)
add_subdirectory(implicit_convert)
add_subdirectory(integer_ops)
add_subdirectory(math_brute_force)
add_subdirectory(multiple_device_context)
add_subdirectory(profiling)
add_subdirectory(relationals)
add_subdirectory(select)
add_subdirectory(thread_dimensions)
add_subdirectory(vec_align)
add_subdirectory(vec_step)
